<resources>
    <string name="app_name">SPCT Attendance</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Schedule</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_logout">Logout</string>

    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="create_class">Create Class</string>
    <string name="class_name">Class Name</string>
    <string name="year_level">Year Level</string>
    <string name="subject">Subject</string>

    <string name="add_student">Add Student</string>
    <string name="student_name">Student Name</string>
    <string name="id_number">ID Number</string>
    <string name="add_photo">Add Photo</string>
    <string name="count_photo"></string>

    <string name="scan">Scan</string>

    <string name="scan_result">Loading...</string>
</resources>